Release 1.2.10

OOI Data version 0.0.5
Preload database version 1.0.8

Release 1.2.9

Issue #12040 - parameter resolution error
Issue #10396 - parameter resolution error
Issue #4107 - dissolved oxygen computation fixes
Issue #9011 - dissolved oxygen computation fixes

Release 1.2.8

Issue #12035
- Update resolution of L2 parameters that depend on other L2

Release 1.2.7

Migrate preload data model to ooi_data

Release 1.2.6

Issue #10777
- Don't report all data masked when querying virtual streams

Release 1.2.5

Issue #11871
- Don't consider out-of-range bins when computing particle count estimate

Issue #11783 Add QC Flag to annotations
- Updated AnnotationRecord to include QCFlag

Release 1.2.4

Issue #11952
- Updated aggregation response to be JSON (was plain string)

Issue #11861
- QC executed and QC results variables are incorrectly typed

Issue #10777
- modify stream_engine to utilize deployment times to bound product generation requests

Release 1.2.3

Issue #11753
- Aggregation fails when string lengths differ between datasets

Issue #11715
- Added source attribute to the AnnotationRecord class to identify the creator of the data.

Release 1.2.2

Issue #11646
- Production generation fails if no asset management data exists for one or more deployments

Issue #11642
- Bumped preload database pointer (v1.0.1) for "bin sizes incorrect in preload database"

Release 1.2.1

Issue #11371
- Updated NetCDF header sensor asset management information

Release 1.2.0

Issue #11371
- Add sensor asset management information to NetCDF header

Release 1.1.2

Issue #11624
- Aggregation fails for CSV files

Issue #11623
- Aggregation fails if the aggregation host does not have any local files

Issue #11613
- Fixed hard-coded log level in util/gather.py

Release 1.1.1

Issue #11528
- Accept the "execute_dpa" flag. When set to false no data product algorithms will be executed.

Issue #10820